--- a/stack.yaml
+++ b/stack.yaml
@@ -1,12 +1,15 @@
-resolver: nightly-2019-05-31
+resolver: nightly-2019-07-24
 packages:
 - yam
 - yam-datasource
 - yam-redis
-# - example
+- example
 extra-deps:
+  #- ../salak/salak
+  #- ../salak/salak-yaml
+- salak-0.3
+- salak-yaml-0.3
 - persistent-2.10.0
-- swagger2-2.4
 
 pvp-bounds: both
 nix:
